2004-03-23  Fumitoshi UKAI  <ukai@debian.or.jp>

	* scripts/w3mhelp.cgi.in: use charset parramter
	* scripts/w3mhelp-funcdesc.en.pl.in: add charset
	* scripts/w3mhelp-funcdesc.ja.pl.in: ditto

2004-03-22  Fumitoshi UKAI  <ukai@debian.or.jp>

	* main.c (main): don't use SystemCharset for default of
		DisplayChaset, DocumentCharset

2004-03-22  Fumitoshi UKAI  <ukai@debian.or.jp>

	* w3m 0.5
	* version.c.in: update
	* doc/README: version 0.5, release date, maintainer
	* doc-jp/README: ditto
	* NEWS: update

2004-03-22  Fumitoshi UKAI  <ukai@debian.or.jp>

	* main.c (main): DisplayCharset and DocumentCharset also follow 
	    locale configuration
	* Makefile.in (distclean): distclean libwc
	* libwc/Makefile.in: add distclean
	* scripts/multipart/Makefile.in: add distclean
	* scripts/w3mman/Makefile.in: add distclean
	* scripts/Makefile.in: add distclean

2004-03-22  Fumitoshi UKAI  <ukai@debian.or.jp>

	* w3mimg/Makefile.in (distclean): rm -f w3mimg.a

2004-03-22  Akihiro Sagawa <sagawa@sohgoh.net>

	* [w3m-dev 04046]
	* configure.in (AC_W3M_IPv6): should check it after ext libs

2004-03-22  Akihiro Sagawa <sagawa@sohgoh.net>

	* [w3m-dev 04045]
	* Makefile.in (DEFUNS): need $(top_srcdir)

2004-03-21  Fumitoshi UKAI  <ukai@debian.or.jp>

	* Makefile.in (install-po): fix for broken sh.
	  reported in [w3m-dev 04043] Re: w3m 0.5

2004-03-13  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 04041] spell-miss in configure
	* acinclude.m4 (AC_W3M_M17N): fix help-string
		suggested by sakane@d4.bsd.nes.nec.co.jp (Yoshinobu Sakane)

2004-02-06  MANTANI Nobutaka <nobutaka@nobutaka.com>

	* [w3m-dev 04038] --disable-m17n problem in form.c
	* form.c (form_update_line): fix for disable-m17n

2004-01-10  ABE Yuji <cbo46560@pop12.odn.ne.jp>

	* [w3m-dev 04030] PUSH_TAG macro
	* table.c (PUSH_TAG): fixed problem in --disable-m17n

2003-12-09  WATANABE Katsuyuki <knabe@sannet.ne.jp>

	* [w3m-dev 04025] mismatch message in ja.po
	* po/ja.po: fix wrong messages
